Wed Jun 15 19:52:23 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/ossl_ocsp.c (ossl_ocspreq_sign, ossl_ocspbres_sign): Allow
	  specifying hash algorithm used in signing. They are hard coded to use
	  SHA-1.
	  Based on a patch provided by Tim Shirley <tidoublemy@gmail.com>.
	  [ruby-core:70915] [Feature #11552] [GH ruby/openssl#28]

	* test/openssl/test_ocsp.rb: Test sign-verify works.

Wed Jun 15 01:46:16 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c: [DOC] fix rdoc directive, and an example of negative
	  value.  [ruby-core:76025] [Bug #12487]

Wed Jun 15 01:44:42 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/mkconfig.rb: provide Unicode Version information as
	  RbConfig::CONFIG['UNICODE_VERSION'].
	  [ruby-core:75845] [Feature #12460]

Wed Jun 15 00:01:18 2016  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* test/ruby/enc/test_case_comprehensive.rb
	  (TestComprehensiveCaseFold::read_data): use \A and \z instead of
	  ^ and $ in regexp.

Tue Jun 14 23:43:00 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/backward.h (rb_cFixnum, rb_cBignum): remove the
	  backward compatibility macros, to fail incompatible extension
	  libraries early.  [Bug #12427]

Tue Jun 14 22:22:07 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* strftime.c (rb_strftime_with_timespec): limit the result string
	  size by the format length, to get rid of unlimited memory use.

Tue Jun 14 22:11:11 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/ossl_ocsp.c (ossl_ocspcid_get_issuer_name_hash,
	  ossl_ocspcid_get_issuer_key_hash, ossl_ocspcid_get_hash_algorithm):
	  Add accessor methods OCSP::CertificateId#issuer_name_hash,
	  #issuer_key_hash, #hash_algorithm.
	  Based on a patch provided by Paul Kehrer <paul.l.kehrer@gmail.com>.
	  [ruby-core:48062] [Feature #7181]

	* test/openssl/test_ocsp.rb: Test these new methods.

Tue Jun 14 22:07:25 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/date/date_strftime.c (date_strftime_with_tmx): reject too